<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        tools:context="com.github.abdalimran.mycv.MainActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/card_bg"
            android:layout_marginBottom="15dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/propic"
                android:layout_gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/card_bg"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="4dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cat_PersonalInfo"
                    android:textColor="#3F51B5"
                    android:textSize="15sp"
                    android:layout_margin="2dp"
                    android:gravity="center"/>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="#FFE8E8E8"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="#000"
                android:textSize="15sp"
                android:layout_margin="2dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="#000"
                android:textSize="15sp"
                android:layout_margin="2dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile"
                android:textColor="#000"
                android:textSize="15sp"
                android:layout_margin="2dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/card_bg"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="4dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cat_EducationalInfo"
                    android:textColor="#3F51B5"
                    android:textSize="15sp"
                    android:layout_margin="2dp"
                    android:gravity="center"/>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="#FFE8E8E8"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ssc"
                android:textColor="#000"
                android:textSize="15sp"
                android:layout_margin="2dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sscinstitute"
                android:textColor="#000"
                android:textSize="15sp"
                android:layout_margin="2dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sscgpa"
                android:textColor="#000"
                android:textSize="15sp"
                android:layout_margin="2dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hsc"
                android:textColor="#000"
                android:textSize="15sp"
                android:layout_margin="2dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hscinstitute"
                android:textColor="#000"
                android:textSize="15sp"
                android:layout_margin="2dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hscgpa"
                android:textColor="#000"
                android:textSize="15sp"
                android:layout_margin="2dp"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/card_bg"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="4dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cat_Experience"
                    android:textColor="#3F51B5"
                    android:textSize="15sp"
                    android:layout_margin="2dp"
                    android:gravity="center"/>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="#FFE8E8E8"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exp1"
                android:textColor="#000"
                android:textSize="15sp"
                android:layout_margin="2dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exp2"
                android:textColor="#000"
                android:textSize="15sp"
                android:layout_margin="2dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exp3"
                android:textColor="#000"
                android:textSize="15sp"
                android:layout_margin="2dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/card_bg"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="4dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cat_Skills"
                    android:textColor="#3F51B5"
                    android:textSize="15sp"
                    android:layout_margin="2dp"
                    android:gravity="center"/>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="#FFE8E8E8"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skill1"
                android:textColor="#000"
                android:textSize="15sp"
                android:layout_margin="2dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skill2"
                android:textColor="#000"
                android:textSize="15sp"
                android:layout_margin="2dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skill3"
                android:textColor="#000"
                android:textSize="15sp"
                android:layout_margin="2dp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
